--- a/www/index.html
+++ b/www/index.html
@@ -114,7 +114,7 @@ Kalenderikonen tar dig till bokningen för bland annat tvättstuga och sällskap
 
 <div id="doorcontrolcontent">
             <form action="/DoorControl/PerformUnlock" method="post" ><ul>
-                  <li><button type="submit" name="epName" value="varde" id="hemmadorren">varde</button></li>
+                   <li><button type="submit" name="epName" value="varde" id="hemmadorren"></button></li>
                   </ul>
             </form><div class="doorControlStatus"></div>
 </div>
