--- a/www/index.html
+++ b/www/index.html
@@ -67,17 +67,17 @@ console.log('Går in i DeviceReady');
 <div id="index">
 <div id="information" class="inforuta_hide">
 <table>
-<tr><td class="rutatvatt">		
+<tr><td class="infostart_door">		
 <img src="img/door_button.png" class="scale-with-grid-start-information"></img>
-</td><td class="information-text-middle">
+</td></tr><tr><td class="information-text-middle">
 Dörr öppningsknappen är tillför att ge ett komplement till hemma.sgsstudentbostader.se. Om ditt område är utrustat med öppning av entrédörren via hemma.sgsstudentbostader.se gör Dörr-knappen samma sak.
 </td></tr>
 
-<tr><td class="rutatvatt">
-
+<tr><td class="infostart_door">
 <img src="img/cal_button.png" class="scale-with-grid-start-information"></img>
-</td><td class="information-text-middle">
+</td></tr><tr><td class="information-text-middle">
 Kalenderikonen tar dig till bokningen för bland annat tvättstuga och sällskapsrum. Du kommer behöva använda ditt inlogg som du använder på www.sgsstudentbostader.se för att logga in.
+
 </td></tr>
 
 </table>
