--- a/www/index.html
+++ b/www/index.html
@@ -69,13 +69,13 @@ console.log('Går in i DeviceReady');
 <table>
 <tr><td class="infostart_door">		
 <img src="img/door_button.png" class="scale-with-grid-start-information"></img>
-</td></tr><tr><td class="information-text-middle">
+</td></tr><tr><td class="information-text-middle-start">
 Dörr öppningsknappen är tillför att ge ett komplement till hemma.sgsstudentbostader.se. Om ditt område är utrustat med öppning av entrédörren via hemma.sgsstudentbostader.se gör Dörr-knappen samma sak.
 </td></tr>
 
 <tr><td class="infostart_door">
 <img src="img/cal_button.png" class="scale-with-grid-start-information"></img>
-</td></tr><tr><td class="information-text-middle">
+</td></tr><tr><td class="information-text-middle-start">
 Kalenderikonen tar dig till bokningen för bland annat tvättstuga och sällskapsrum. Du kommer behöva använda ditt inlogg som du använder på www.sgsstudentbostader.se för att logga in.
 
 </td></tr>
