Gjort info-ruts minder, plus error fixate

--- a/www/index.html
+++ b/www/index.html
@@ -75,7 +75,7 @@ Dörr öppningsknappen är tillför att ge ett komplement till hemma.sgsstudentb
 
 <tr><td class="infostart_door">
 <img src="img/cal_button.png" class="scale-with-grid-start-information"></img>
-</td></tr><tr><td class="information-text-middle-start">
+</td></tr><tr><td class="information-text-middle-start information-text-middle-start-bottom">
 Kalenderikonen tar dig till bokningen för bland annat tvättstuga och sällskapsrum. Du kommer behöva använda ditt inlogg som du använder på www.sgsstudentbostader.se för att logga in.
 
 </td></tr>
