Gjort knapparna till text. Skapat pushmeny för att kunna gömma den.

--- a/www/index.html
+++ b/www/index.html
@@ -51,6 +51,7 @@ console.log('Går in i DeviceReady');
 <div id="loaderImage"></div>
 </div>
 </span>
+<span id="pushmeny">
 <table id="underuppernav" class="uppernavclass">
 <tr>
 <td id="navigering" onmousedown="varde"><img src="img/button_tillbaka.png" class="scale-with-grid-logo-small"></img></td>
@@ -60,7 +61,7 @@ console.log('Går in i DeviceReady');
 <td id="infoclick" onclick="info_animation()"><img src="img/button_info.png" class="scale-with-grid-logo-small"></img</td>
 </tr>
 </table>
-
+</span>
 
 
 
