--- a/www/index.html
+++ b/www/index.html
@@ -17,6 +17,7 @@ console.log('Går in i onLoad');
         document.addEventListener("deviceready", onDeviceReady, false); 
     };
     function onDeviceReady() {
+    StatusBar.backgroundColorByHexString("#252c47");
 console.log('Går in i DeviceReady');    	
         document.addEventListener("backbutton", function(){
 	        navigator.notification.confirm(
