--- a/www/index.html
+++ b/www/index.html
@@ -13,8 +13,8 @@
 		<title>SGS Studentbostäder - Hemma</title>
 <script type="text/javascript">
 function onLoad() {
-StatusBar.overlaysWebView(false);
-StatusBar.backgroundColorByHexString("#252c47");
+/*StatusBar.overlaysWebView(false);
+StatusBar.backgroundColorByHexString("#252c47");*/
 console.log('Går in i onLoad');
         document.addEventListener("deviceready", onDeviceReady, false); 
     };
