flyttat till deviceready

--- a/www/index.html
+++ b/www/index.html
@@ -13,14 +13,14 @@
 		<title>SGS Studentbostäder - Hemma</title>
 <script type="text/javascript">
 function onLoad() {
-/*StatusBar.overlaysWebView(false);*/
-StatusBar.backgroundColorByHexString("#252c47");
+
 console.log('Går in i onLoad');
         document.addEventListener("deviceready", onDeviceReady, false); 
 
     };
     function onDeviceReady() {
-
+StatusBar.overlaysWebView(true);
+StatusBar.backgroundColorByHexString("#cccccc");
 console.log('Går in i DeviceReady');    	
         document.addEventListener("backbutton", function(){
 	        navigator.notification.confirm(
