--- a/www/index.html
+++ b/www/index.html
@@ -19,8 +19,8 @@ console.log('Går in i onLoad');
 
     };
     function onDeviceReady() {
-StatusBar.overlaysWebView(true);
-StatusBar.backgroundColorByHexString("#cccccc");
+/*StatusBar.overlaysWebView(true);
+StatusBar.backgroundColorByHexString("#cccccc");*/
 console.log('Går in i DeviceReady');    	
         document.addEventListener("backbutton", function(){
 	        navigator.notification.confirm(
