--- a/www/index.html
+++ b/www/index.html
@@ -19,6 +19,7 @@ console.log('Går in i onLoad');
 
     };
     function onDeviceReady() {
+    StatusBar.hide();
 /*StatusBar.overlaysWebView(true);
 StatusBar.backgroundColorByHexString("#cccccc");*/
 console.log('Går in i DeviceReady');    	
