--- a/www/index.html
+++ b/www/index.html
@@ -29,9 +29,9 @@ console.log('Går in i DeviceReady');
 			'Nej,Ja')
         }, false);
 alert('hi');
-StatusBar.hide();
-StatusBar.overlaysWebView(true);
+StatusBar.overlaysWebView(false);
 StatusBar.backgroundColorByHexString("#cccccc");
+alert('hi2');
     };
 </script>
 <script>
