--- a/www/index.html
+++ b/www/index.html
@@ -29,9 +29,10 @@ console.log('Går in i DeviceReady');
 			'Nej,Ja')
         }, false);
 alert('hi');
-StatusBar.overlaysWebView(false);
-alert('hi2');
+/*StatusBar.overlaysWebView(false);*/
+
 StatusBar.backgroundColorByHexString("#cccccc");
+alert('hi2');
     };
 </script>
 <script>
