--- a/www/index.html
+++ b/www/index.html
@@ -31,7 +31,7 @@ console.log('Går in i DeviceReady');
 alert('hi');
 /*StatusBar.overlaysWebView(false);*/
 
-StatusBar.backgroundColorByHexString("#cccccc");
+/*StatusBar.backgroundColorByHexString("#cccccc");*/
 alert('hi2');
     };
 </script>
