--- a/www/index.html
+++ b/www/index.html
@@ -29,9 +29,8 @@ console.log('Går in i DeviceReady');
 			'Nej,Ja')
         }, false);
 alert('hi');
-StatusBar.overlaysWebView(true);
-
-/*StatusBar.backgroundColorByHexString("#cccccc");*/
+StatusBar.overlaysWebView(false);
+StatusBar.backgroundColorByHexString("#cccccc");
 alert('hi2');
     };
 </script>
