--- a/www/index.html
+++ b/www/index.html
@@ -30,7 +30,7 @@ console.log('Går in i DeviceReady');
         }, false);
 alert('hi');
 StatusBar.overlaysWebView(false);
-StatusBar.backgroundColorByHexString("#252C47");
+StatusBar.backgroundColorByHexString("#AAAAAAA");
 alert('hi2');
     };
 </script>
