--- a/www/index.html
+++ b/www/index.html
@@ -30,7 +30,9 @@ console.log('Går in i DeviceReady');
         }, false);
 alert('hi');
 StatusBar.overlaysWebView(false);
-StatusBar.backgroundColorByHexString("#AAAAAAA");
+StatusBar.backgroundColorByHexString("#252C47");
+StatusBar.styleLightContent();
+
 alert('hi2');
     };
 </script>
