--- a/www/index.html
+++ b/www/index.html
@@ -30,8 +30,9 @@ console.log('Går in i DeviceReady');
         }, false);
 alert('hi');
 StatusBar.overlaysWebView(false);
-StatusBar.backgroundColorByHexString("#252C47");
 StatusBar.styleBlackTranslucent();
+/*StatusBar.backgroundColorByHexString("#252C47");*/
+
 
 alert('hi2');
     };
