--- a/www/index.html
+++ b/www/index.html
@@ -29,7 +29,7 @@ console.log('Går in i DeviceReady');
 			'Nej,Ja')
         }, false);
 alert('hi');
-StatusBar.overlaysWebView(false);
+/*StatusBar.overlaysWebView(false);*/
 StatusBar.styleBlackTranslucent();
 /*StatusBar.backgroundColorByHexString("#252C47");*/
 
