--- a/www/index.html
+++ b/www/index.html
@@ -29,9 +29,9 @@ console.log('Går in i DeviceReady');
 			'Nej,Ja')
         }, false);
 alert('hi');
-/*StatusBar.overlaysWebView(false);*/
-StatusBar.styleBlackTranslucent();
-/*StatusBar.backgroundColorByHexString("#252C47");*/
+StatusBar.overlaysWebView(false);
+/*StatusBar.styleBlackTranslucent();*/
+StatusBar.backgroundColorByHexString("#252C47");
 
 
 alert('hi2');
