--- a/www/index.html
+++ b/www/index.html
@@ -31,7 +31,7 @@ console.log('Går in i DeviceReady');
 alert('hi');
 StatusBar.overlaysWebView(false);
 StatusBar.backgroundColorByHexString("#252C47");
-/*StatusBar.styleBlackTranslucent();*/
+StatusBar.styleBlackTranslucent();
 
 alert('hi2');
     };
