--- a/www/index.html
+++ b/www/index.html
@@ -29,9 +29,11 @@ console.log('Går in i DeviceReady');
 			'Nej,Ja')
         }, false);
 alert('hi');
+StatusBar.styleBlackOpaque();
+StatusBar.styleLightContent();
+StatusBar.styleBlackTranslucent();
 StatusBar.overlaysWebView(false);
 StatusBar.backgroundColorByHexString("#252C47");
-StatusBar.styleBlackTranslucent();
 
 alert('hi2');
     };
