--- a/www/index.html
+++ b/www/index.html
@@ -29,9 +29,8 @@ console.log('Går in i DeviceReady');
 			'Nej,Ja')
         }, false);
 alert('hi');
+console.log(StatusBar.styleBlackOpaque(););
 StatusBar.styleBlackOpaque();
-StatusBar.styleLightContent();
-StatusBar.styleBlackTranslucent();
 StatusBar.overlaysWebView(false);
 StatusBar.backgroundColorByHexString("#252C47");
 
