--- a/www/index.html
+++ b/www/index.html
@@ -28,13 +28,13 @@ console.log('Går in i DeviceReady');
 			'Avsluta',
 			'Nej,Ja')
         }, false);
-alert('hi');
+/*alert('hi');
 console.log(StatusBar.styleBlackOpaque(););
 StatusBar.styleBlackOpaque();
 StatusBar.overlaysWebView(false);
 StatusBar.backgroundColorByHexString("#252C47");
 
-alert('hi2');
+alert('hi2');*/
     };
 </script>
 <script>
