--- a/www/index.html
+++ b/www/index.html
@@ -52,7 +52,7 @@ alert('hi2');*/
 <tr>
 
 <!-- här kan det bli fel när varde är borta -->
-<td id="navigering" onmousedown="varde" onclick="loggaut()"><img src="img/sgs_logout.png" class="scale-with-grid-logo-small" id="back"></img></td>
+<td id="navigering" onmousedown="varde" onclick="yourCallbackloggaut()"><img src="img/sgs_logout.png" class="scale-with-grid-logo-small" id="back"></img></td>
 <td>
 <img id="topplogga" class="scale-with-grid-logo-small" src="img/sgs_logo_width_512.png">
 </td>
