--- a/www/index.html
+++ b/www/index.html
@@ -19,7 +19,9 @@ console.log('Går in i onLoad');
 
     };
     function onDeviceReady() {
-
+alert('Innan styling');
+StatusBar.styleLightContent();
+alert('Efter styling');
 console.log('Går in i DeviceReady');
 		navigator.splashscreen.hide();
 		console.log('Gömmer splash screen för framförallt android');
