--- a/www/index.html
+++ b/www/index.html
@@ -20,7 +20,8 @@ console.log('Går in i onLoad');
     };
     function onDeviceReady() {
 alert('Innan styling');
-StatusBar.styleBlackTranslucent();
+StatusBar.overlaysWebView(false);
+StatusBar.styleLightContent();
 alert('Efter styling');
 console.log('Går in i DeviceReady');
 		navigator.splashscreen.hide();
