--- a/www/index.html
+++ b/www/index.html
@@ -19,10 +19,10 @@ console.log('Går in i onLoad');
 
     };
     function onDeviceReady() {
-alert('Innan styling');
+/*alert('Innan styling');
 StatusBar.overlaysWebView(false);
 StatusBar.styleLightContent();
-alert('Efter styling');
+alert('Efter styling');*/
 console.log('Går in i DeviceReady');
 		navigator.splashscreen.hide();
 		console.log('Gömmer splash screen för framförallt android');
