--- a/www/index.html
+++ b/www/index.html
@@ -42,6 +42,7 @@ console.log('Går in i DeviceReady');
 
 <span id="bakgrundinformation" class="bakgrundinformation_hide">
 </span>
+<span id="allmeny">
 <span id="helamenyn">
 <table id="uppernav" class="uppernavclass">
 <tr>
@@ -58,7 +59,7 @@ console.log('Går in i DeviceReady');
 <div id="loaderImage"></div>
 </div>
 </span>
-
+</span>
 
 <span id="pushmeny">
 <table id="underuppernav" class="uppernavclass">
@@ -72,7 +73,7 @@ console.log('Går in i DeviceReady');
 </table>
 </span>
 
-
+</span>
 
 <div id="index">
 <div id="information" class="inforuta_hide">
