--- a/www/index.html
+++ b/www/index.html
@@ -6,6 +6,7 @@
 		<meta name="format-detection" content="telephone=no" />
 		<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, target-densitydpi=device-dpi" />
 		<script src="jquery-1.4.2.min.js" type="text/javascript"></script>
+		<script type="text/javascript" src="js/aes.js"></script>
 		<link rel="stylesheet" id="styling" type="text/css" href="css/index.css" />
 		<link rel="stylesheet" type="text/css" href="css/animationer.css" />
 		<link rel="stylesheet" type="text/css" href="css/loading.css" />
@@ -37,6 +38,9 @@ console.log('Går in i DeviceReady');
 </head>
 
 <body onload="onLoad()">
+
+
+<!-- Detta fungerar =D det finns nedladdat en aes kryptering i hämtade filer -->
 
 
 
@@ -81,7 +85,7 @@ console.log('Går in i DeviceReady');
 <tr><td class="infostart_door">		
 <img src="img/door_button.png" class="scale-with-grid-start-information"></img>
 </td></tr><tr><td class="information-text-middle-start">
-<p>Dörr öppningsknappen är tillför att ge ett komplement till hemma.sgsstudentbostader.se. Om ditt område är utrustat med öppning av entrédörren via hemma.sgsstudentbostader.se gör Dörr-knappen samma sak.</p>
+<p>Dörr öppningsknappen öppnar entrédörren på de områden som är utrustade med denna funktionen. <br> Det är bara möjligt att öppna entrédörren om du är uppkopplad via ett SGS-nätverk.</p>
 </td></tr>
 
 <tr><td class="infostart_door">
@@ -139,6 +143,7 @@ console.log('Går in i DeviceReady');
 		<script type="text/javascript" src="js/felmeddelande.js"></script>
 		<script type="text/javascript" src="js/script.js"></script>
 		<script type="text/javascript" src="js/error.js"></script>
+		<script type="text/javascript" src="js/chiffrera.js"></script>
 		<script type="text/javascript">
 			app.initialize();
 		</script>
