--- a/www/index.html
+++ b/www/index.html
@@ -21,6 +21,7 @@ console.log('Går in i onLoad');
     };
     function onDeviceReady() {
     alert(navigator.connection.type);
+    console.log(navigator.connection.type);
 console.log('Går in i DeviceReady');
 		navigator.splashscreen.hide();
 		console.log('Gömmer splash screen för framförallt android');
