--- a/www/index.html
+++ b/www/index.html
@@ -60,7 +60,22 @@ console.log('Går in i DeviceReady');
 <td id="infoclick" onclick="info_animation()"><img src="img/button_info.png" class="scale-with-grid-logo-small"></img</td>
 </tr>
 </table>
+<div id="inforuta" class="nyinforuta_hide">
+<table>
+<tr><td class="infostart_door">		
+<img src="img/door_button.png" class="scale-with-grid-start-information"></img>
+</td></tr><tr><td class="information-text-middle-start">
+<p>Dörr öppningsknappen öppnar entrédörren på de områden som är utrustade med denna funktionen. <br> Det är bara möjligt att öppna entrédörren om du är uppkopplad via ett SGS-nätverk.</p>
+</td></tr>
 
+<tr><td class="infostart_door">
+<img src="img/cal_button.png" class="scale-with-grid-start-information"></img>
+</td></tr><tr><td class="information-text-middle-start information-text-middle-start-bottom">
+<p>Kalenderikonen tar dig till bokningen för bland annat tvättstuga och sällskapsrum. Du kommer behöva använda ditt inlogg som du använder på www.sgsstudentbostader.se för att logga in.</p>
+</td></tr>
+</table>
+
+</div>
 <div id="loading" style="visibility:hidden">
 <div id="loaderImage"></div>
 </div>
@@ -81,16 +96,17 @@ console.log('Går in i DeviceReady');
 
 </span>
 
+
 <div id="index">
-<div id="information" class="inforuta_hide">
+<div id="information" class="nyinforuta_hide">
 <table>
-<tr><td class="infostart_door">		
+<tr><td class="">		
 <img src="img/door_button.png" class="scale-with-grid-start-information"></img>
 </td></tr><tr><td class="information-text-middle-start">
 <p>Dörr öppningsknappen öppnar entrédörren på de områden som är utrustade med denna funktionen. <br> Det är bara möjligt att öppna entrédörren om du är uppkopplad via ett SGS-nätverk.</p>
 </td></tr>
 
-<tr><td class="infostart_door">
+<tr><td class="">
 <img src="img/cal_button.png" class="scale-with-grid-start-information"></img>
 </td></tr><tr><td class="information-text-middle-start information-text-middle-start-bottom">
 <p>Kalenderikonen tar dig till bokningen för bland annat tvättstuga och sällskapsrum. Du kommer behöva använda ditt inlogg som du använder på www.sgsstudentbostader.se för att logga in.</p>
