ny inforuta. Nöjd!

--- a/www/index.html
+++ b/www/index.html
@@ -60,7 +60,7 @@ console.log('Går in i DeviceReady');
 <td id="infoclick" onclick="info_animation()"><img src="img/button_info.png" class="scale-with-grid-logo-small"></img</td>
 </tr>
 </table>
-<div id="inforuta" class="nyinforuta_hide">
+<!--<div id="inforuta" class="nyinforuta_hide">
 <table>
 <tr><td class="infostart_door">		
 <img src="img/door_button.png" class="scale-with-grid-start-information"></img>
@@ -75,7 +75,7 @@ console.log('Går in i DeviceReady');
 </td></tr>
 </table>
 
-</div>
+</div>-->
 <div id="loading" style="visibility:hidden">
 <div id="loaderImage"></div>
 </div>
@@ -98,6 +98,7 @@ console.log('Går in i DeviceReady');
 
 
 <div id="index">
+
 <div id="information" class="nyinforuta_hide">
 <table>
 <tr><td class="">		
@@ -115,6 +116,7 @@ console.log('Går in i DeviceReady');
 
 </table>
 </div>
+
 <div class="container">
 	<div class="sixteen columns"></div>
 	
