--- a/www/index.html
+++ b/www/index.html
@@ -84,7 +84,7 @@ console.log('Går in i DeviceReady');
 
 <div id="index">
 <div id="information" class="nyinforuta_hide">
-<table>
+<table class="info-tabel-tvatta">
 <tr><td class="">		
 <img src="img/door_button.png" class="scale-with-grid-start-information"></img>
 </td></tr><tr><td class="information-text-middle-start">
@@ -98,7 +98,7 @@ console.log('Går in i DeviceReady');
 </td></tr>
 </table>
 </div>
-
+<div class="blura">
 <div class="container">
 	<div class="sixteen columns"></div>
 	
@@ -124,7 +124,7 @@ console.log('Går in i DeviceReady');
 			<p><small>(Book)</small></p>
 		</div>
 	</div>
-
+</div>
 
 
 	
@@ -136,6 +136,7 @@ console.log('Går in i DeviceReady');
             </form><div class="doorControlStatus"></div>
 </div>
 </div>
+
 
 		<script type="text/javascript" src="js/element.js"></script>
 		<script type="text/javascript" src="phonegap.js"></script>
