Stänger av progress om det blir fel inlogg.

--- a/www/index.html
+++ b/www/index.html
@@ -88,17 +88,17 @@ console.log('Går in i DeviceReady');
 <tr><td class="">		
 <img src="img/door_button.png" class="scale-with-grid-start-information"></img>
 </td></tr><tr><td class="information-text-middle-start">
-<p>Dörr öppningsknappen öppnar entrédörren på de områden som är utrustade med denna funktionen. <br> Det är bara möjligt att öppna entrédörren om du är uppkopplad via ett SGS-nätverk.</p>
+<p>Om ditt område har möjlighet att öppna ytterdörren via hemma.sgsstudentbostader.se kan du använda dig av "Öppna Entrédörr". Knappen fungerar sålänge du är uppkopplad via ett SGS-nätverk.
 </td></tr>
 
 <tr><td class="">
 <img src="img/cal_button.png" class="scale-with-grid-start-information"></img>
 </td></tr><tr><td class="information-text-middle-start information-text-middle-start-bottom">
-<p>Kalenderikonen tar dig till bokningen för bland annat tvättstuga och sällskapsrum. Du kommer behöva använda ditt inlogg som du använder på www.sgsstudentbostader.se för att logga in.</p>
+<p>"Boka" tar dig till bokningen av bland annat tvättstuga och sällskapsrum. Du kommer behöva använda ditt inlogg som du använder på www.sgsstudentbostader.se för att logga in.</p>
 </td></tr>
 </table>
 </div>
-<div class="blura">
+
 <div class="container">
 	<div class="sixteen columns"></div>
 	
@@ -123,7 +123,6 @@ console.log('Går in i DeviceReady');
 			<p><strong>Boka</strong></p>
 			<p><small>(Book)</small></p>
 		</div>
-	</div>
 </div>
 
 
