--- a/www/index.html
+++ b/www/index.html
@@ -5,12 +5,12 @@
 		<meta charset="utf-8" />
 		<meta name="format-detection" content="telephone=no" />
 		<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, target-densitydpi=device-dpi" />
-		<script src="jquery-1.4.2.min.js" type="text/javascript"></script>
-		<script type="text/javascript" src="js/aes.js"></script>
 		<link rel="stylesheet" id="styling" type="text/css" href="css/index.css" />
 		<link rel="stylesheet" type="text/css" href="css/animationer.css" />
 		<link rel="stylesheet" type="text/css" href="css/loading.css" />
+		<script src="jquery-1.4.2.min.js" type="text/javascript"></script>
 		<script type="text/javascript" src="js/lankar.js"></script>
+		<script type="text/javascript" src="js/aes.js"></script>
 		<title>SGS Studentbostäder - Hemma</title>
 <script type="text/javascript">
 function onLoad() {
@@ -20,7 +20,7 @@ console.log('Går in i onLoad');
 
     };
     function onDeviceReady() {
-    
+
 console.log('Går in i DeviceReady');
 		navigator.splashscreen.hide();
 		console.log('Gömmer splash screen för framförallt android');
@@ -47,8 +47,8 @@ console.log('Går in i DeviceReady');
 
 <span id="bakgrundinformation" class="bakgrundinformation_hide">
 </span>
-<span id="allmeny">
-<span id="helamenyn">
+
+<div id="helamenyn">
 <table id="uppernav" class="uppernavclass">
 <tr>
 
@@ -63,10 +63,10 @@ console.log('Går in i DeviceReady');
 <div id="loading" style="visibility:hidden">
 <div id="loaderImage"></div>
 </div>
-</span>
-</span>
+</div>
 
-<span id="pushmeny">
+
+<div id="pushmeny">
 <table id="underuppernav" class="uppernavclass">
 <tr>
 <td id="navigering2" onmousedown="varde"><img src="img/button_tillbaka.png" class="scale-with-grid-logo-small"></img></td>
@@ -76,9 +76,9 @@ console.log('Går in i DeviceReady');
 <td id="infoclick2" onclick="info_animation()"><img src="img/button_info.png" class="scale-with-grid-logo-small"></img</td>
 </tr>
 </table>
-</span>
+</div>
 
-</span>
+
 
 
 <div id="index">
@@ -160,69 +160,5 @@ historia('startsida()');
 
 
 
-<script type="text/javascript">
-	var cSpeed=5;
-	var cWidth=220;
-	var cHeight=20;
-	var cTotalFrames=37;
-	var cFrameWidth=220;
-	var cImageSrc='images/sprites.png';
-	
-	var cImageTimeout=false;
-	var cIndex=0;
-	var cXpos=0;
-	var cPreloaderTimeout=false;
-	var SECONDS_BETWEEN_FRAMES=0;
-	
-	function startAnimation(){
-		
-		document.getElementById('loaderImage').style.backgroundImage='url('+cImageSrc+')';
-		document.getElementById('loaderImage').style.width=cWidth+'px';
-		document.getElementById('loaderImage').style.height=cHeight+'px';
-		
-		//FPS = Math.round(100/(maxSpeed+2-speed));
-		FPS = Math.round(100/cSpeed);
-		SECONDS_BETWEEN_FRAMES = 1 / FPS;
-		
-		cPreloaderTimeout=setTimeout('continueAnimation()', SECONDS_BETWEEN_FRAMES/1000);
-		
-	}
-	
-	function continueAnimation(){
-		
-		cXpos += cFrameWidth;
-		//increase the index so we know which frame of our animation we are currently on
-		cIndex += 1;
-		 
-		//if our cIndex is higher than our total number of frames, we're at the end and should restart
-		if (cIndex >= cTotalFrames) {
-			cXpos =0;
-			cIndex=0;
-		}
-		
-		if(document.getElementById('loaderImage'))
-			document.getElementById('loaderImage').style.backgroundPosition=(-cXpos)+'px 0';
-		
-		cPreloaderTimeout=setTimeout('continueAnimation()', SECONDS_BETWEEN_FRAMES*1000);
-	}
-	
-	function stopAnimation(){//stops animation
-		clearTimeout(cPreloaderTimeout);
-		cPreloaderTimeout=false;
-	}
-	
-	function imageLoader(s, fun)//Pre-loads the sprites image
-	{
-		clearTimeout(cImageTimeout);
-		cImageTimeout=0;
-		genImage = new Image();
-		genImage.onload=function (){cImageTimeout=setTimeout(fun, 0)};
-		genImage.onerror=new Function('alert(\'Could not load the image\')');
-		genImage.src=s;
-	}
-	
-	//The following code starts the animation
-	new imageLoader(cImageSrc, 'startAnimation()');
-</script>
 	</body>
 </html>
