går att stänga även i meny

--- a/www/index.html
+++ b/www/index.html
@@ -41,6 +41,8 @@ console.log('Går in i DeviceReady');
 <body onload="onLoad()">
 <span id="bakgrundinformation" class="bakgrundinformation_hide">
 </span>
+<div id="dummie">
+</div>
 <div id="helamenyn">
 <table id="uppernav" class="uppernavclass">
 <tr>
@@ -67,7 +69,6 @@ console.log('Går in i DeviceReady');
 </tr>
 </table>
 </div>
-
 
 
 
