skicka en sista gång för ikväll

--- a/www/index.html
+++ b/www/index.html
@@ -78,7 +78,7 @@ console.log('Går in i DeviceReady');
 <tr><td class="">		
 <img src="img/door_button.png" class="scale-with-grid-start-information"></img>
 </td></tr><tr><td class="information-text-middle-start">
-<p>Om ditt område har möjlighet att öppna ytterdörren via hemma.sgsstudentbostader.se kan du använda dig av "Öppna Entrédörr". Knappen fungerar sålänge du är uppkopplad via ett SGS-nätverk.
+<p>"Öppna Entrédörr" låter dig öppna entrédörren om ditt område är utrustat med denna funktion. Knappen fungerar endast om du är uppkopplad via ett SGS-nätverk.
 </td></tr>
 
 <tr><td class="">
