alla http => https

--- a/www/index.html
+++ b/www/index.html
@@ -78,13 +78,13 @@ console.log('Går in i DeviceReady');
 <tr><td class="">		
 <img src="img/door_button.png" class="scale-with-grid-start-information"></img>
 </td></tr><tr><td class="information-text-middle-start">
-<p>"Öppna Entrédörr" låter dig öppna entrédörren om ditt område är utrustat med denna funktion. Knappen fungerar endast om du är uppkopplad via ett SGS-nätverk.
+<p>"Öppna Entrédörr" låter dig öppna entrédörren om ditt område är utrustat med denna funktion. Knappen fungerar endast om din enhet når ett SGS-nätverk.
 </td></tr>
 
 <tr><td class="">
 <img src="img/cal_button.png" class="scale-with-grid-start-information"></img>
 </td></tr><tr><td class="information-text-middle-start information-text-middle-start-bottom">
-<p>"Boka" tar dig till bokningen av bland annat tvättstuga och sällskapsrum. Du kommer behöva använda ditt inlogg som du använder på www.sgsstudentbostader.se för att logga in.</p>
+<p>"Boka" tar dig till bokningen av olika typer av faciliteter som t.ex. tvättstuga och sällskapsrum. För att logga in använder du samma uppgifter som på www.sgsstudentbostader.se.</p>
 </td></tr>
 </table>
 </div>
