--- a/www/index.html
+++ b/www/index.html
@@ -11,7 +11,7 @@
 		<script src="jquery-1.4.2.min.js" type="text/javascript"></script>
 		<script type="text/javascript" src="js/lankar.js"></script>
 		<script type="text/javascript" src="js/aes.js"></script>
-		<title>SGS Studentbostäder - Hemma</title>
+		<title>SGS Boende</title>
 <script type="text/javascript">
 function onLoad() {
 
@@ -92,8 +92,8 @@ console.log('Går in i DeviceReady');
 <div class="container">
 	<div class="sixteen columns"></div>
 	
-		<div id="dorren" class="eight columns center" onmousedown="hamtahemma('http://hemma.sgsstudentbostader.se/DoorControl/Fullscreen'),vidklick('dorren')">
-			
+
+		<div class="eight columns center" onmousedown="hamtahemma('http://hemma.sgsstudentbostader.se/DoorControl/Fullscreen')">	
 			
 			<button class="doorbutton">
 
@@ -106,7 +106,7 @@ console.log('Går in i DeviceReady');
 			</span>		 
 		</div>
 		
-		<div id="bokar" class="eight columns center" onclick="kollainlogg(),vidklick('bokar')">
+		<div class="eight columns center" onclick="kollainlogg()">
 			<button>
 			<img class="scale-with-grid" src="img/cal_button.png" />
 			</button>
@@ -153,3 +153,5 @@ historia('startsida()');
 
 	</body>
 </html>
+		<!--<div id="dorren" class="eight columns center" onmousedown="hamtahemma('http://hemma.sgsstudentbostader.se/DoorControl/Fullscreen'),vidklick('dorren')">
+		<div id="bokar" class="eight columns center" onclick="kollainlogg(),vidklick('bokar')">-->
