--- a/www/index.html
+++ b/www/index.html
@@ -11,7 +11,7 @@
 		<script src="jquery-1.4.2.min.js" type="text/javascript"></script>
 		<script type="text/javascript" src="js/lankar.js"></script>
 		<script type="text/javascript" src="js/aes.js"></script>
-		<title>SGS Boende</title>
+		<title>SGS Mitt Hem</title>
 <script type="text/javascript">
 function onLoad() {
 
