--- a/www/index.html
+++ b/www/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html style="height: 100%;">
 	<head>
 		<meta charset="utf-8" />
 		<meta name="format-detection" content="telephone=no" />
