--- a/www/index.html
+++ b/www/index.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" id="styling" type="text/css" href="css/index.css" />
 		<link rel="stylesheet" type="text/css" href="css/animationer.css" />
 		<link rel="stylesheet" type="text/css" href="css/loading.css" />
-		<script src="jquery-1.4.2.min.js" type="text/javascript"></script>
+    <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
 		<script type="text/javascript" src="js/lankar.js"></script>
 		<script type="text/javascript" src="js/aes.js"></script>
 		<title>SGS Mitt Hem</title>
