--- a/www/index.html
+++ b/www/index.html
@@ -8,7 +8,8 @@
 		<link rel="stylesheet" id="styling" type="text/css" href="css/index.css" />
 		<link rel="stylesheet" type="text/css" href="css/animationer.css" />
 		<link rel="stylesheet" type="text/css" href="css/loading.css" />
-    <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="jquery-1.11.3.min.js"></script>
+    <script type='application/javascript' src="js/fastclick.js"></script>
 		<script type="text/javascript" src="js/lankar.js"></script>
 		<script type="text/javascript" src="js/aes.js"></script>
 		<title>SGS Mitt Hem</title>
@@ -17,6 +18,9 @@ function onLoad() {
 
 console.log('Går in i onLoad');
         document.addEventListener("deviceready", onDeviceReady, false); 
+$(function() {
+    FastClick.attach(document.body);
+});
 
     };
     function onDeviceReady() {
