Cordova.js tillagt
Felmeddelande på android.

--- a/www/index.html
+++ b/www/index.html
@@ -128,7 +128,7 @@ console.log('Går in i DeviceReady');
 
 
 		<script type="text/javascript" src="js/element.js"></script>
-		<script type="text/javascript" src="phonegap.js"></script>
+		<script type="text/javascript" src="cordova.js"></script>
 		<script type="text/javascript" src="js/historik.js"></script>
 		<script type="text/javascript" src="js/animation.js"></script>
 		<script type="text/javascript" src="js/inloggning.js"></script>
