tar bort app.initialize()

--- a/www/index.html
+++ b/www/index.html
@@ -137,7 +137,7 @@ console.log('Går in i DeviceReady');
 		<script type="text/javascript" src="js/error.js"></script>
 		<script type="text/javascript" src="js/chiffrera.js"></script>
 		<script type="text/javascript">
-			app.initialize();
+//			app.initialize();
 		</script>
 
 
