--- a/www/index.html
+++ b/www/index.html
@@ -136,8 +136,9 @@ console.log('Går in i DeviceReady');
 		<script type="text/javascript" src="js/script.js"></script>
 		<script type="text/javascript" src="js/error.js"></script>
 		<script type="text/javascript" src="js/chiffrera.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
 		<script type="text/javascript">
-//			app.initialize();
+			app.initialize();
 		</script>
 
 
